# kresvm

./: .gitignore  CMakeLists.txt  README.md
src/: kernel.h  main.cpp  svm.cpp  svm.h
